reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_tag.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestEnumTag"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestEnumTag"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEnumTag",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "Variant1",
            "fields": {
              "named": [
                {
                  "name": "field_name",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Variant2",
            "fields": {
              "named": [
                {
                  "name": "field_name",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEnumTag",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "Variant1",
            "fields": {
              "named": [
                {
                  "name": "field_name",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Variant2",
            "fields": {
              "named": [
                {
                  "name": "field_name",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
